--- a/core/res/res/values/xd_symbols.xml
+++ b/core/res/res/values/xd_symbols.xml
@@ -9,4 +9,7 @@
     <java-symbol type="array" name="config_deviceDisabledComponents" />
     <java-symbol type="array" name="config_globallyDisabledComponents" />
     <java-symbol type="array" name="config_forceEnabledComponents" />
+
+    <!-- Vendor platform signatures -->
+    <java-symbol type="array" name="config_vendorPlatformSignatures" />
 </resources>
