Add idle lockout message for FaceUnlock
Our impl disable face unlock if the device is not unlocked in 4 hours, a friendly message will be shown to the user

Remove AOSP translations as well

Change-Id: I5b8af871bf6f3ee792fc2788c632b00524ce61cb

--- a/core/res/res/values/xd_config.xml
+++ b/core/res/res/values/xd_config.xml
@@ -79,4 +79,10 @@
 
     <!-- Whether to allow process with media UID to access CameraServiceProxy -->
     <bool name="config_allowMediaUidForCameraServiceProxy">false</bool>
+
+    <!-- Array containing custom error messages from vendor. -->
+    <string-array name="face_error_vendor" translatable="false">
+        <item>@string/face_unlock_disabled_idle</item>
+    </string-array>
+
 </resources>
