SystemUI: Tell user when face unlock detection is running
Google removed the animation on Android 12, let's use a text instead

Change-Id: I93c4121c57137764edb0b31678d103fd5f7d4dcc

--- a/packages/SystemUI/res/values/xd_strings.xml
+++ b/packages/SystemUI/res/values/xd_strings.xml
@@ -70,4 +70,7 @@
     <string name="screenrecord_hevc_switch_label">Enable HEVC</string>
     <string name="screenrecord_hevc_switch_summary">Use more efficient HEVC video encoding</string>
 
+    <!-- Face Unlock -->
+    <string name="face_unlock_recognizing">Recognizing face...</string>
+
 </resources>
