--- a/packages/SystemUI/res/values/xd_config.xml
+++ b/packages/SystemUI/res/values/xd_config.xml
@@ -21,4 +21,6 @@
     <!-- StatusBar burn-in protection -->
     <bool name="config_disableStatusBarBurnInProtection">false</bool>
 
+    <!-- Update battery info every second when device is charging -->
+    <bool name="config_alternateFastchargeInfoUpdate">false</bool>
 </resources>
