xdUtils: Update restart utility methods
Change-Id: Ifad26faa7b5913b2186a0d78b5d839673469c582
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: Julius Ronald Christanto <juliusronald12@gmail.com>

--- a/core/res/res/values/xd_symbols.xml
+++ b/core/res/res/values/xd_symbols.xml
@@ -160,4 +160,7 @@
     <java-symbol type="string" name="system_restart_title" />
     <java-symbol type="string" name="system_restart_message" />
 
-</resources>
+    <!-- SystemUI restart dialog -->
+    <java-symbol type="string" name="systemui_restart_title" />
+    <java-symbol type="string" name="systemui_restart_message" />
+</resources>    
