xdUtils: Refactor restart utility methods
Change-Id: If714d15c9c07de4b7bcfc35a28d937e4c68e457c
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: Julius Ronald Christanto <juliusronald12@gmail.com>

--- a/core/res/res/values/xd_symbols.xml
+++ b/core/res/res/values/xd_symbols.xml
@@ -163,4 +163,8 @@
     <!-- SystemUI restart dialog -->
     <java-symbol type="string" name="systemui_restart_title" />
     <java-symbol type="string" name="systemui_restart_message" />
+
+    <!-- Launcher restart dialog -->
+    <java-symbol type="string" name="launcher_restart_title" />
+    <java-symbol type="string" name="launcher_restart_message" />
 </resources>    
