--- a/core/res/res/values/xd_strings.xml
+++ b/core/res/res/values/xd_strings.xml
@@ -33,4 +33,8 @@
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">SystemUI restart required</string>
     <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
+
+    <!-- Launcher Restart -->
+    <string name="launcher_restart_title">Launcher restart required</string>
+    <string name="launcher_restart_message">For all changes to take effect, a Launcher restart is required. Restart Launcher now?</string>
 </resources>
